--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maa Durga Dudh Utpadan - Premium Dairy Products</title>
+    <meta name="description" content="Maa Durga Dudh Utpadan - Premium fresh dairy products in Rajbiraj, Saptari, Nepal. Cow milk, buffalo milk, paneer, ghee and catering services.">
+    <meta name="keywords" content="dairy, milk, paneer, ghee, Rajbiraj, Saptari, Nepal, fresh dairy products, Maa Durga dairy, cow milk, buffalo milk">
+    <meta name="author" content="Maa Durga Dudh Utpadan">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Maa Durga Dudh Utpadan - Premium Dairy Products in Rajbiraj">
+    <meta property="og:description" content="Fresh, pure dairy products from our farm. Cow milk, buffalo milk, paneer, ghee and wedding catering services.">
+    <meta property="og:type" content="business.business">
+    <meta property="og:image" content="images/dairy-cow.png">
+    <meta name="theme-color" content="#FF6B6B">
+    <title>Maa Durga Dudh Utpadan - Premium Dairy Products in Rajbiraj, Saptari</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -184,5 +193,85 @@
             <p>Quality Dairy Products | Fresh from Farm to Table</p>
         </div>
     </footer>
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Maa Durga Dudh Utpadan",
+      "image": "images/dairy-cow.png",
+      "description": "Premium fresh dairy products including cow milk, buffalo milk, paneer, ghee and catering services",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Maa Durga Dudh Utpadan",
+        "addressLocality": "Rajbiraj",
+        "addressRegion": "Saptari",
+        "postalCode": "56200",
+        "addressCountry": "NP"
+      },
+      "telephone": "+977-9807789438",
+      "email": "info@maadurgadairy.com",
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "26.540738",
+        "longitude": "86.748937"
+      },
+      "url": "https://maadurgadairy.com",
+      "priceRange": "₹",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+        "opens": "06:00",
+        "closes": "18:00"
+      }
+    }
+    </script>
+
+    <!-- Product Schema for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Dairy Products",
+      "description": "Fresh dairy products - cow milk, buffalo milk, paneer, ghee",
+      "offers": {
+        "@type": "AggregateOffer",
+        "priceCurrency": "NPR",
+        "offers": [
+          {
+            "@type": "Offer",
+            "name": "Cow Milk",
+            "price": "100",
+            "priceCurrency": "NPR"
+          },
+          {
+            "@type": "Offer",
+            "name": "Buffalo Milk",
+            "price": "100",
+            "priceCurrency": "NPR"
+          },
+          {
+            "@type": "Offer",
+            "name": "Paneer",
+            "price": "750",
+            "priceCurrency": "NPR"
+          },
+          {
+            "@type": "Offer",
+            "name": "Cow Ghee",
+            "price": "1500",
+            "priceCurrency": "NPR"
+          },
+          {
+            "@type": "Offer",
+            "name": "Buffalo Ghee",
+            "price": "1200",
+            "priceCurrency": "NPR"
+          }
+        ]
+      }
+    }
+    </script>
 </body>
 </html>
