--- a/index.html
+++ b/index.html
@@ -1,277 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Maa Durga Dudh Utpadan - Premium fresh dairy products in Rajbiraj, Saptari, Nepal. Cow milk, buffalo milk, paneer, ghee and catering services.">
-    <meta name="keywords" content="dairy, milk, paneer, ghee, Rajbiraj, Saptari, Nepal, fresh dairy products, Maa Durga dairy, cow milk, buffalo milk">
-    <meta name="author" content="Maa Durga Dudh Utpadan">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Maa Durga Dudh Utpadan - Premium Dairy Products in Rajbiraj">
-    <meta property="og:description" content="Fresh, pure dairy products from our farm. Cow milk, buffalo milk, paneer, ghee and wedding catering services.">
-    <meta property="og:type" content="business.business">
-    <meta property="og:image" content="images/dairy-cow.png">
-    <meta name="theme-color" content="#FF6B6B">
-    <title>Maa Durga Dudh Utpadan - Premium Dairy Products in Rajbiraj, Saptari</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Navigation Header -->
-    <header class="navbar">
-        <div class="container">
-            <div class="logo">
-                <span class="logo-icon">🥛</span>
-                <h1>Maadurgadairy</h1>
-            </div>
-            <nav class="nav-links">
-                <a href="#about">About</a>
-                <a href="#products">Products</a>
-                <a href="#services">Services</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Maa Durga Dudh Utpadan</h1>
-            <p>Premium Fresh Dairy Products from Our Farm to Your Table</p>
-            <p class="tagline">Quality, Purity & Freshness Guaranteed</p>
-        </div>
-        <div class="hero-image">
-            <img src="images/dairy-cow.png" alt="Dairy Cow">
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="about" id="about">
-        <div class="container">
-            <h2>About Us</h2>
-            <p>Welcome to <strong>Maa Durga Dudh Utpadan</strong> - Your trusted source for the freshest dairy products. We take pride in delivering pure, nutritious, and high-quality dairy items directly from our farm.</p>
-            <div class="about-features">
-                <div class="feature">
-                    <span class="icon">🐄</span>
-                    <h3>Pure Milk</h3>
-                    <p>Fresh milk from healthy cows</p>
-                </div>
-                <div class="feature">
-                    <span class="icon">🥛</span>
-                    <h3>Quality Assured</h3>
-                    <p>100% Natural Products</p>
-                </div>
-                <div class="feature">
-                    <span class="icon">🚚</span>
-                    <h3>Fresh Delivery</h3>
-                    <p>Daily fresh supplies</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Products Section -->
-    <section class="products" id="products">
-        <div class="container">
-            <h2>Our Products</h2>
-            <div class="products-grid">
-                <!-- Cow Milk -->
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1550583724-b2692b85b150?w=300&h=300&fit=crop" alt="Cow Milk">
-                    </div>
-                    <div class="product-info">
-                        <h3>Cow Milk</h3>
-                        <p>Fresh, pure cow milk delivered daily</p>
-                        <div class="price">₹ 100 <span class="unit">per liter</span></div>
-                    </div>
-                </div>
-
-                <!-- Buffalo Milk -->
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="images/buffalo-milk.jpg" alt="Buffalo Milk">
-                    </div>
-                    <div class="product-info">
-                        <h3>Buffalo Milk</h3>
-                        <p>Rich, creamy buffalo milk for health</p>
-                        <div class="price">₹ 100 <span class="unit">per liter</span></div>
-                    </div>
-                </div>
-
-                <!-- Paneer -->
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="images/paneer.jpg" alt="Paneer">
-                    </div>
-                    <div class="product-info">
-                        <h3>Fresh Paneer</h3>
-                        <p>Handmade paneer from premium milk</p>
-                        <div class="price">₹ 750 <span class="unit">per kg</span></div>
-                    </div>
-                </div>
-
-                <!-- Ghee (Cow) -->
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="images/cow-ghee.png" alt="Cow Ghee">
-                    </div>
-                    <div class="product-info">
-                        <h3>Cow Ghee</h3>
-                        <p>Pure, organic ghee from cow milk</p>
-                        <div class="price">₹ 1500 <span class="unit">per kg</span></div>
-                    </div>
-                </div>
-
-                <!-- Ghee (Buffalo) -->
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="images/buffalo-ghee.jpg" alt="Buffalo Ghee">
-                    </div>
-                    <div class="product-info">
-                        <h3>Buffalo Ghee</h3>
-                        <p>Premium ghee from buffalo milk</p>
-                        <div class="price">₹ 1200 <span class="unit">per kg</span></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section class="services" id="services">
-        <div class="container">
-            <h2>Special Services</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">🎉</div>
-                    <h3>Bhoj & Events</h3>
-                    <p>Bulk orders for weddings, bhoj, and social gatherings. Fresh supplies tailored to your requirements.</p>
-                    <button class="cta-btn">Contact Us</button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact" id="contact">
-        <div class="container">
-            <h2>Get In Touch</h2>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <div class="info-item">
-                        <span class="info-icon">📱</span>
-                        <div>
-                            <h3>Phone</h3>
-                            <p>+977 9807789438</p>
-                        </div>
-                    </div>
-                    <div class="info-item">
-                        <span class="info-icon">📍</span>
-                        <div>
-                            <h3>Location</h3>
-                            <p>Maa Durga Dudh Utpadan, Rajbiraj, Saptari, Nepal</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="map-container">
-                <h3 style="text-align: center; margin-bottom: 1.5rem;">Visit Us - Maa Durga Dudh Utpadan</h3>
-                <div class="map-info" style="text-align: center; margin-bottom: 1rem; color: var(--dark-color);">
-                    <p><strong>📍 Location:</strong> Maa Durga Dudh Utpadan, Saptari, Nepal</p>
-                </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1686.1397290806412!2d86.74960550602084!3d26.54089472048291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eefb001e45326d%3A0x4826da23e32baeb9!2sMaa%20Durga%20Dudh%20utpadan!5e1!3m2!1sen!2snp!4v1765002366073!5m2!1sen!2snp" width="100%" height="400" style="border:0; border-radius: 15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <div style="text-align: center; margin-top: 1rem;">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Maa Durga Dudh Utpadan. All rights reserved. | Maadurgadairy</p>
-            <p>Quality Dairy Products | Fresh from Farm to Table</p>
-        </div>
-    </footer>
-
-    <!-- Structured Data for SEO -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "Maa Durga Dudh Utpadan",
-      "image": "images/dairy-cow.png",
-      "description": "Premium fresh dairy products including cow milk, buffalo milk, paneer, ghee and catering services",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Maa Durga Dudh Utpadan",
-        "addressLocality": "Rajbiraj",
-        "addressRegion": "Saptari",
-        "postalCode": "56200",
-        "addressCountry": "NP"
-      },
-      "telephone": "+977-9807789438",
-      "email": "info@maadurgadairy.com",
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": "26.540738",
-        "longitude": "86.748937"
-      },
-      "url": "https://maadurgadairy.com",
-      "priceRange": "₹",
-      "openingHoursSpecification": {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-        "opens": "06:00",
-        "closes": "18:00"
-      }
-    }
-    </script>
-
-    <!-- Product Schema for SEO -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Product",
-      "name": "Dairy Products",
-      "description": "Fresh dairy products - cow milk, buffalo milk, paneer, ghee",
-      "offers": {
-        "@type": "AggregateOffer",
-        "priceCurrency": "NPR",
-        "offers": [
-          {
-            "@type": "Offer",
-            "name": "Cow Milk",
-            "price": "100",
-            "priceCurrency": "NPR"
-          },
-          {
-            "@type": "Offer",
-            "name": "Buffalo Milk",
-            "price": "100",
-            "priceCurrency": "NPR"
-          },
-          {
-            "@type": "Offer",
-            "name": "Paneer",
-            "price": "750",
-            "priceCurrency": "NPR"
-          },
-          {
-            "@type": "Offer",
-            "name": "Cow Ghee",
-            "price": "1500",
-            "priceCurrency": "NPR"
-          },
-          {
-            "@type": "Offer",
-            "name": "Buffalo Ghee",
-            "price": "1200",
-            "priceCurrency": "NPR"
-          }
-        ]
-      }
-    }
-    </script>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>E-commerce Platform</title>\n    <link rel="stylesheet" href="styles.css">\n</head>\n<body>\n    <header>\n        <h1>Product Catalog</h1>\n    </header>\n    <main>\n        <section id="product-catalog">\n            <h2>Available Products</h2>\n            <div class="product" id="product-1">\n                <h3>Product 1</h3>\n                <p>Description of product 1.</p>\n                <button class="add-to-cart">Add to Cart</button>\n            </div>\n            <div class="product" id="product-2">\n                <h3>Product 2</h3>\n                <p>Description of product 2.</p>\n                <button class="add-to-cart">Add to Cart</button>\n            </div>\n            <!-- More products can be added here -->\n        </section>\n        <div id="modal-cart" class="modal">\n            <div class="modal-content">\n                <span class="close-button">&times;</span>\n                <h2>Shopping Cart</h2>\n                <ul id="cart-items">\n                    <!-- Cart items will be populated here dynamically -->\n                </ul>\n                <button id="checkout-button">Checkout</button>\n            </div>\n        </div>\n        <section id="checkout-form">\n            <h2>Checkout</h2>\n            <form id="form">\n                <label for="name">Name:</label>\n                <input type="text" id="name" name="name" required>\n                <label for="email">Email:</label>\n                <input type="email" id="email" name="email" required>\n                <label for="address">Address:</label>\n                <input type="text" id="address" name="address" required>\n                <button type="submit">Place Order</button>\n            </form>\n        </section>\n    </main>\n    <script src="script.js"></script>\n</body>\n</html>
